# vintage_ai

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.streamlit/: config.toml
dashboard/: app.py
notebooks/: BERTopic_prova.ipynb  EEEE.py  IG.parquet  RAG_example.ipynb  README.md  bugatti eb110.parquet  bugatti type 57.parquet  ferrari 250 gte.parquet  ferrari 308 gtb.parquet  ferrari 330 gtc.parquet  ferrari 355 gtb.parquet  ferrari 550 maranello.parquet  ferrari dino 246.parquet  ferrari f40.parquet  ferrari testarossa.parquet  lamborghini 350 gt.parquet  lamborghini 400 gt.parquet  lamborghini countach 25th.parquet  lamborghini diablo vt.parquet  lamborghini lm002.parquet  lamborghini miura p400.parquet  langchain_local.ipynb  maserati 3500 gt.parquet  maserati mc12.parquet  maserati mistral.parquet  scrape_ferrari_forum.ipynb  sentiment_analysis.ipynb
notebooks/data/raw/: ferrari_threads.parquet
notebooks/database_example/: duck_db.ipynb
notebooks/langchain_agents/: mail_sorting.ipynb
notebooks/trends/: correlation_price.ipynb  google_trends.ipynb  ig_test.py  reddit_test.ipynb  scrape_reddit.py  tiktok_comments.ipynb
scripts/: crawl.py  init_db.py
scripts/ingest/: ingest_data.ipynb
scripts/scraping/: InstagramScraping.py  asfsfgd.json  hashtag_cosplay_posts.json  hashtag_dogs_posts.json  hashtag_dogslover_posts.json  hashtag_dogsofinstagram_posts.json  hashtag_ferrari355gtb_posts.json  instagram_posts.json  scrape_tiktok.py  scrape_with_local_llm.py
src/vintage_ai/: settings.py
src/vintage_ai/api/: main.py
(+17 files in other folders)
